# monorepo-factory

./: .gitignore  pyproject.toml
monorepo_factory/: __main__.py
save/: ARCHITECTURE.md  repos.toml  repos.yml
